--- a/context/conf/sonar.properties
+++ b/context/conf/sonar.properties
@@ -1,9 +1,9 @@
-#sonar.security.realm=LDAP
-ldap.url=ldap://vertenti.com.br:389
-ldap.bindDn=CN=@LDAP_BIND_USER@,OU=Sede,DC=vertenti,DC=com,DC=BR
-ldap.bindPassword=@LDAP_BIND_PSWD@
-ldap.user.baseDn=DC=vertenti,DC=com,DC=br
-ldap.user.request=(&(objectClass=user)(sAMAccountName={login}))
-ldap.user.realNameAttribute=displayname
-ldap.user.emailAttribute=mail
-ldap.group.request=(&(objectClass=group)(member={dn}))
+#sonar.security.realm=LDAP #Comentado para não se logar via LDAP (Basta comentar esta linha)
+#ldap.url=ldap://vertenti.com.br:389
+#ldap.bindDn=CN=@LDAP_BIND_USER@,OU=Sede,DC=vertenti,DC=com,DC=BR
+#ldap.bindPassword=@LDAP_BIND_PSWD@
+#ldap.user.baseDn=DC=vertenti,DC=com,DC=br
+#ldap.user.request=(&(objectClass=user)(sAMAccountName={login}))
+#ldap.user.realNameAttribute=displayname
+#ldap.user.emailAttribute=mail
+#ldap.group.request=(&(objectClass=group)(member={dn}))
