--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
-version: '3.6'
+version: '3.3'
 
 services:
   server:
     restart: always
+    depends_on:
+      - db
     build:
       context: ./context
       dockerfile: server.dockerfile
@@ -11,8 +13,9 @@ services:
         LDAP_BIND_PSWD: ${LDAP_BIND_PSWD:-''}
     container_name: sonarqube_server
     ports:
-      - 9000:9000
-      - 9002:9002
+      - "9000:9000"
+#      - "9000:80"
+      - "9092:9092"
     environment:
       SONARQUBE_JDBC_USERNAME: sonar
       SONARQUBE_JDBC_PASSWORD: sonar
@@ -22,7 +25,8 @@ services:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
       - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
-
+    links:
+      - db
   db:
     restart: always
     image: postgres:10.5-alpine
